add products page add products-page component to pages folder modify footer

--- a/frontend/agritech/src/app/features/footer/footer.component.html
+++ b/frontend/agritech/src/app/features/footer/footer.component.html
@@ -1,21 +1,4 @@
-<div class="container-fluid mt-5">
-    <!-- Patnership Section -->
-    <div class="px-4 bg-patners text-center">
-        <div class="marketing py-5">
-            <div class="row d-flex justify-content-evenly align-items-center sponsa">
-                <div class="col-sm-6 col-md-3 col-sm-2 py-2 p-1">
-                    <img src="../../../assets/growWithGoogle.svg" class="img-fluid img-thumbnail sponsers" width="70%"
-                        height="auto" />
-                </div>
-                <div class="col-sm-6 col-md-3 col-sm-2 py-2 p-2">
-                    <img src="../../../assets/andela.png" class="img-fluid sponsers" width="70%" height="auto" />
-                </div>
-                <div class="col-sm-6 col-md-3 col-sm-2 py-2 p-3">
-                    <img src="../../../assets/pluralsight.png" class="img-fluid sponsers" width="70%" height="auto" />
-                </div>
-            </div>
-        </div>
-    </div>
+<div class="container-fluid">
     <!-- FOOTER -->
     <footer class="pt-4 px-5 mb-3 pt-md-5 border-top bg-footer">
         <span class="float-end"><a href="#" class="link-secondary">Back to top</a></span>
@@ -49,7 +32,7 @@
                     <div class="p-2 link-secondary"><i class="fa fa-twitter"></i> </div>
                     <div class="p-2 link-secondary"><i class="fa fa-facebook-f"></i></div>
                     <div class="p-2 link-secondary"><i class="fa fa-instagram"></i></div>
-                  </div>
+                </div>
             </div>
             <div class="col-6 col-md">
                 <h5 class="link-secondary">Useful Links</h5>
