--- a/frontend/agritech/src/app/pages/home-page/home-page.component.html
+++ b/frontend/agritech/src/app/pages/home-page/home-page.component.html
@@ -36,7 +36,8 @@
                     <div class="carousel-caption text-start text-box">
                         <h1>AgriTech <br> Marketplace</h1>
                         <hr class="hr">
-                        <p>AgriTech is an online marketplace that enables farmers to sell their farm produce to buyers.
+                        <p>AgriTech is an online marketplace that enables farmers to sell their farm produce to
+                            buyers.
                             <br>Sign up to sell your produce for free.
                         </p>
                     </div>
@@ -428,3 +429,22 @@
     <!-- /END THE FEATURETTES -->
 
 </main>
+<!-- Patnership Section -->
+<div class="container-fluid mt-5">
+    <div class="px-4 bg-patners text-center">
+        <div class="marketing py-5">
+            <div class="row d-flex justify-content-evenly align-items-center sponsa">
+                <div class="col-sm-6 col-md-3 col-sm-2 py-2 p-1">
+                    <img src="../../../assets/growWithGoogle.svg" class="img-fluid img-thumbnail sponsers" width="70%"
+                        height="auto" />
+                </div>
+                <div class="col-sm-6 col-md-3 col-sm-2 py-2 p-2">
+                    <img src="../../../assets/andela.png" class="img-fluid sponsers" width="70%" height="auto" />
+                </div>
+                <div class="col-sm-6 col-md-3 col-sm-2 py-2 p-3">
+                    <img src="../../../assets/pluralsight.png" class="img-fluid sponsers" width="70%" height="auto" />
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
