--- a/frontend/agritech/src/app/app.component.html
+++ b/frontend/agritech/src/app/app.component.html
@@ -1,3 +1,4 @@
 <app-header></app-header>
 <app-home-page></app-home-page>
+<!-- <app-products-page></app-products-page> -->
 <app-footer></app-footer>
