--- a/frontend/agritech/src/styles.css
+++ b/frontend/agritech/src/styles.css
@@ -6,3 +6,43 @@
 body {
   background-color: #F7F6F4;
 }
+
+.bg-banner {
+  background-color: #819A20;
+}
+
+.bg-button {
+  background-color: #416422;
+}
+
+hr:not([size]) {
+  height: 2px;
+}
+
+hr {
+  max-width: 60px;
+  margin: 1rem 0;
+  color: inherit;
+  background-color: #000000;
+  border: 0;
+  opacity: 1.25;
+  text-align: right;
+}
+
+/* MARKETING CONTENT
+-------------------------------------------------- */
+
+/* Center align the text within the three columns below the carousel */
+.marketing .col-lg-4 {
+  margin-bottom: 1.5rem;
+  text-align: center;
+}
+.marketing h2 {
+  font-weight: 400;
+}
+/* rtl:begin:ignore */
+.marketing .col-lg-4 p {
+  margin-right: 0.75rem;
+  margin-left: 0.75rem;
+}
+/* rtl:end:ignore */
