--- a/frontend/agritech/src/app/app.component.html
+++ b/frontend/agritech/src/app/app.component.html
@@ -1,4 +1,5 @@
 <app-header></app-header>
-<app-home-page></app-home-page>
+<!-- <app-home-page></app-home-page> -->
 <!-- <app-products-page></app-products-page> -->
+<app-product-detail></app-product-detail>
 <app-footer></app-footer>
