add shopping cart component modify footer and header

--- a/frontend/agritech/src/app/features/footer/footer.component.html
+++ b/frontend/agritech/src/app/features/footer/footer.component.html
@@ -5,7 +5,7 @@
         <div class="row">
             <div class="col-12 col-md">
                 <img class="mb-2" src="../../../assets/logo-small.png" alt="" width="" height="35">
-                <small class="d-block mb-3">&copy; 2021</small>
+                <small class="d-block mb-3 link-secondary">&copy; 2021 Copyright</small>
             </div>
             <div class="col-6 col-md">
                 <h5 class="link-secondary">Address</h5>
