--- a/frontend/agritech/src/app/features/header/header.component.html
+++ b/frontend/agritech/src/app/features/header/header.component.html
@@ -206,9 +206,9 @@
                         Login
                     </button>
 
-                    <a href="#" class="navbar-modal"><i class="fa fa-fw fa-heart"
-                            style="color: rgba(0,0,0,.55); margin-right: 2rem;"></i> </a>
-                    <a href="#" class="navbar-modal"><i class="fa fa-fw fa-shopping-cart"
+                    <a href="#" class="navbar-moda"><i class="fa fa-fw fa-heart"
+                            style="color: rgba(0,0,0,.55);"></i> </a>
+                    <a href="#" class="navbar-modal px-3"><i class="fa fa-fw fa-shopping-cart"
                             style="color: rgba(0,0,0,.55);"></i> </a>
                 </div>
             </div>
