--- a/frontend/agritech/src/app/pages/home-page/home-page.component.html
+++ b/frontend/agritech/src/app/pages/home-page/home-page.component.html
@@ -35,7 +35,7 @@
                 <div class="container">
                     <div class="carousel-caption text-start text-box">
                         <h1>AgriTech <br> Marketplace</h1>
-                        <hr class="hr">
+                        <hr class="featurette-divider">
                         <p>AgriTech is an online marketplace that enables farmers to sell their farm produce to
                             buyers.
                             <br>Sign up to sell your produce for free.
@@ -124,7 +124,7 @@
         <!-- START THE FEATURETTES -->
         <!-- Featured Section -->
         <h2 class="blog-post-title">Featured Products</h2>
-        <hr>
+        <hr class="featurette-divider">
 
         <div class="row featurette mb-4">
             <div class="row row-cols-1 row-cols-sm-2 row-cols-md-2 row-cols-lg-4 g-3">
