--- a/frontend/agritech/src/app/pages/products-page/products-page.component.html
+++ b/frontend/agritech/src/app/pages/products-page/products-page.component.html
@@ -38,7 +38,7 @@
     <div class="container marketing mt-5">
 
         <h2 class="blog-post-title">All Farm Products</h2>
-        <hr>
+        <hr class="featurette-divider">
 
         <div class="row featurette mb-4">
             <div class="row row-cols-1 row-cols-sm-2 row-cols-md-2 row-cols-lg-4 g-3">
