--- a/frontend/agritech/src/app/app.component.html
+++ b/frontend/agritech/src/app/app.component.html
@@ -1,5 +1,6 @@
 <app-header></app-header>
 <!-- <app-home-page></app-home-page> -->
 <!-- <app-products-page></app-products-page> -->
-<app-product-detail></app-product-detail>
+<!-- <app-product-detail></app-product-detail> -->
+<app-shopping-cart></app-shopping-cart>
 <app-footer></app-footer>
