--- a/frontend/agritech/src/app/pages/product-detail/product-detail.component.html
+++ b/frontend/agritech/src/app/pages/product-detail/product-detail.component.html
@@ -4,7 +4,7 @@
     <div class="container marketing">
 
         <h2 class="blog-post-title">Strawberries</h2>
-        <hr>
+        <hr class="featurette-divider">
 
         <div class="row mt-4 mb-5">
             <div class="col-md-6">
@@ -65,7 +65,7 @@
         </div><!-- /.row -->
         <!-- Related Products Section -->
         <h2 class="blog-post-title">Related Products</h2>
-        <hr>
+        <hr class="featurette-divider">
 
         <div class="row featurette mb-4">
             <div class="row row-cols-1 row-cols-sm-2 row-cols-md-2 row-cols-lg-4 g-3">
