--- a/frontend/agritech/src/app/app.component.html
+++ b/frontend/agritech/src/app/app.component.html
@@ -2,5 +2,6 @@
 <!-- <app-home-page></app-home-page> -->
 <!-- <app-products-page></app-products-page> -->
 <!-- <app-product-detail></app-product-detail> -->
-<app-shopping-cart></app-shopping-cart>
+<!-- <app-shopping-cart></app-shopping-cart> -->
+<app-checkout></app-checkout>
 <app-footer></app-footer>
