--- a/frontend/agritech/src/app/pages/shopping-cart/shopping-cart.component.html
+++ b/frontend/agritech/src/app/pages/shopping-cart/shopping-cart.component.html
@@ -28,7 +28,7 @@
                                             <div>
                                                 <h5>Coconuts</h5>
                                                 <p class="mb-3 text-muted text-uppercase small">
-                                                    Weight - 10 kg
+                                                    Weight - 20 kg
                                                 </p>
                                                 <p class="mb-2 text-muted text-uppercase small">
                                                     Farmer : Elly
@@ -134,11 +134,11 @@
                             <h5 class="mb-4">We accept</h5>
 
                             <img class="me-2" width="45px"
+                                src="../../../assets/mpesa.svg"
+                                alt="American Express" />
+                            <img class="me-2" width="45px"
                                 src="https://mdbootstrap.com/wp-content/plugins/woocommerce-gateway-stripe/assets/images/visa.svg"
                                 alt="Visa" />
-                            <img class="me-2" width="45px"
-                                src="https://mdbootstrap.com/wp-content/plugins/woocommerce-gateway-stripe/assets/images/amex.svg"
-                                alt="American Express" />
                             <img class="me-2" width="45px"
                                 src="https://mdbootstrap.com/wp-content/plugins/woocommerce-gateway-stripe/assets/images/mastercard.svg"
                                 alt="Mastercard" />
@@ -156,7 +156,7 @@
                     <!-- Card -->
                     <div class="card mb-3">
                         <div class="card-body">
-                            <h5 class="mb-3" style="text-align: left;">The total amount</h5>
+                            <h5 class="mb-3" style="text-align: left;">Your Cart</h5>
 
                             <ul class="list-group list-group-flush">
                                 <li
@@ -171,16 +171,16 @@
                                 <li
                                     class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 mb-3">
                                     <div style="text-align: left;">
-                                        <strong>The total amount</strong>
-                                        <strong>
-                                            <p class="mb-0">(including VAT)</p>
-                                        </strong>
+                                        <strong>Total amount</strong>
                                     </div>
                                     <span><strong>KES 1200.00</strong></span>
                                 </li>
                             </ul>
 
-                            <button type="button" class="btn btn-primary btn-block text-uppercase">
+                            <button type="button" class="btn btn-primary btn-block block text-uppercase m-1">
+                                Continue Shopping
+                            </button>
+                            <button type="button" class="btn btn-primary btn-block block text-uppercase m-1">
                                 go to checkout
                             </button>
                         </div>
