add payment component

--- a/frontend/agritech/src/app/app.component.html
+++ b/frontend/agritech/src/app/app.component.html
@@ -3,5 +3,7 @@
 <!-- <app-products-page></app-products-page> -->
 <!-- <app-product-detail></app-product-detail> -->
 <!-- <app-shopping-cart></app-shopping-cart> -->
-<app-checkout></app-checkout>
+<!-- <app-checkout></app-checkout> -->
+<!-- <app-shipping-details></app-shipping-details> -->
+<app-payment></app-payment>
 <app-footer></app-footer>
