--- a/frontend/agritech/src/app/pages/product-detail/product-detail.component.html
+++ b/frontend/agritech/src/app/pages/product-detail/product-detail.component.html
@@ -9,27 +9,29 @@
         <div class="row mt-4 mb-5">
             <div class="col-md-6">
                 <div class="card shadow h-100 p-5">
-                    <img src="../../../assets/strawberries.jpg" class="bd-placeholder-img card-img-top img-responsive"
-                        max-width="100%" height="320px">
+                    <img src="../../../assets/strawberries.jpg" class="bd-placeholder-img card-img-top img-responsive p-3"
+                        max-width="100%" height="270px">
 
                     <div class="card-body">
                         <h5 class="card-title">Strawberries</h5>
                         <p class="card-text">Fresh organic strawberries available.</p>
                     </div>
                     <div class="text-center mt-3">
-                        <button type="submit" class="btn btn-success">Filter Products</button>
+                        <button type="submit" class="btn btn-success">Add to cart</button>
                     </div>
                 </div>
             </div>
             <div class="col-md-6">
                 <div class="card shadow h-100 p-5">
-                    <table class="table table-hover table-borderless">
+                    <table class="table table-hover table-borderless mb-3">
                         <thead>
-                            <tr>
+                            <tr class="table-light" class="text-muted">
                                 <th scope="col">10 days delivery</th>
                                 <th scope="col">Transport Inclusive</th>
                             </tr>
                         </thead>
+                    </table>
+                    <table class="table table-hover table-borderless mb-5">
                         <tbody>
                             <tr>
                                 <th scope="row">Farm Produce</th>
@@ -55,7 +57,7 @@
                     </table>
                     <table class="table table-bordered">
                         <tfoot>
-                            <th scope="row" class="py-2">Grand Total</th>
+                            <th scope="row" class="py-2">Total Price</th>
                             <td colspan="2" class="py-2">KES 10000</td>
                         </tfoot>
                     </table>
