add blog and blog-detailed component modify styles.css file

--- a/frontend/agritech/src/app/app.component.html
+++ b/frontend/agritech/src/app/app.component.html
@@ -5,5 +5,7 @@
 <!-- <app-shopping-cart></app-shopping-cart> -->
 <!-- <app-checkout></app-checkout> -->
 <!-- <app-shipping-details></app-shipping-details> -->
-<app-payment></app-payment>
+<!-- <app-payment></app-payment> -->
+<!-- <app-blogs-page></app-blogs-page> -->
+<app-blog-details></app-blog-details>
 <app-footer></app-footer>
